--- a/maman22/makefile
+++ b/maman22/makefile
@@ -1,6 +1,7 @@
 mainmat: mainmat.o mat.o
 	gcc -g -ansi -Wall -pedantic mainmat.o mat.o -o mainmat
 mainmat.o: mainmat.c
-	gcc -c -ansi -Wall -pedantic mainmat.c -o mainmat.o
+	gcc -c -ansi -Wall -pedantic mainmat.c
 mat.o: mat.c mat.h
-	gcc -c -ansi -Wall -pedantic mat.c -o mat.o
+	gcc -c -ansi -Wall -pedantic mat.c
+
