--- a/Maman 14/makefile
+++ b/Maman 14/makefile
@@ -1,10 +1,11 @@
-asm: main.o error.o list_handling.o files.o
-	gcc -o asm main.o error.o list_handling.o files.o
+asm: main.o error.o list_handling.o files.o parser.o
+	gcc -o asm main.o error.o list_handling.o files.o parser.o
 
 
 main.o: main.c parser.h list_handling.h error.h files.h
 	gcc -c -ansi -Wall -pedantic main.c
-
+parser.o: parser.h error.h list_handling.h
+	gcc -c -ansi -Wall -pedantic parser.c
 list_handling.o: list_handling.h
 	gcc -c -ansi -Wall -pedantic list_handling.c
 error.o: error.h
